# lambdaplusplus

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: lambdaplusplusConfig.cmake.in
examples/: CMakeLists.txt  basic.cpp
include/: lambda.h
tests/: CMakeLists.txt  attempt.t.cpp  compose.t.cpp  match.t.cpp  nothrow.t.cpp
